--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "_build": "npm test && npm run browserify && npm run tex && npm run jekyll",
     "_pull": "git pull origin master && npm run gh-pages:pull",
     "_push": "git push origin master && npm run gh-pages:push",
-    "browserify": "browserify -s $npm_package_name -e index.js -o dist/${npm_package_name}.js",
+    "browserify": "npm run browserify:es5; npm run browserify:es6",
+    "browserify:es5": "browserify -s $npm_package_name -e index.js -t babelify -o dist/${npm_package_name}-es5.js",
+    "browserify:es6": "browserify -s $npm_package_name -e index.js -o dist/${npm_package_name}.js",
     "coverage": "npm run istanbul && npm run coveralls",
     "coveralls": "cat ./coverage/lcov.info | coveralls --verbose",
     "dox": "cat src/*.js | dox > gh-pages/_data/dox.json",
@@ -44,12 +46,13 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "babelify": "^6.3.0",
     "browserify": "^10.1.3",
     "coveralls": "^2.11.2",
     "dox": "^0.7.1",
-    "katex": "^0.5.0",
     "install": "^0.1.8",
     "istanbul": "^0.3.14",
+    "katex": "^0.5.0",
     "mocha": "^2.3.1",
     "mocha-lcov-reporter": "0.0.2",
     "should": "^6.0.1"
@@ -58,7 +61,6 @@
     "algebra-group": "^0.2.0",
     "algebra-ring": "^0.2.0",
     "cayley-dickson": "^0.1.0",
-    "inherits": "~2.0.1",
     "is-integer": "^1.0.6",
     "laplace-determinant": "^0.1.0",
     "strict-mode": "^0.4.1"
