--- a/package.json
+++ b/package.json
@@ -9,21 +9,22 @@
   "description": "Vectors, Matrices, Real, Complex, Quaternion",
   "main": "index.js",
   "scripts": {
-    "_build": "npm test && npm run browserify && npm run tex && npm run jekyll",
+    "_build": "npm test && npm run browserify && npm run tex && npm run jekyll; git status",
     "_pull": "git pull origin master && npm run gh-pages:pull",
     "_push": "git push origin master && npm run gh-pages:push",
-    "browserify": "npm run browserify:es5; npm run browserify:es6",
-    "browserify:es5": "browserify -s $npm_package_name -e index.js -t babelify -o dist/${npm_package_name}-es5.js",
-    "browserify:es6": "browserify -s $npm_package_name -e index.js -o dist/${npm_package_name}.js",
+    "browserify": "browserify -r ./index.js:${npm_package_name} -o dist/${npm_package_name}.js",
     "coverage": "npm run istanbul && npm run coveralls",
     "coveralls": "cat ./coverage/lcov.info | coveralls --verbose",
+    "cp": "npm run cp:dist; npm run cp:package.json",
+    "cp:dist": "cp -r dist/ gh-pages/",
+    "cp:package.json": "cp package.json gh-pages/_data/",
     "dox": "cat src/*.js | dox > gh-pages/_data/dox.json",
     "gh-pages:_data": "npm run package.json; npm run dox",
     "gh-pages:push": "git subtree --prefix gh-pages push origin gh-pages",
     "gh-pages:pull": "git subtree --prefix gh-pages pull origin gh-pages",
     "homepage": "echo \"---\ntitle: $npm_package_name\n---\" > gh-pages/index.md; cat README.md >> gh-pages/index.md",
     "istanbul": "istanbul cover _mocha",
-    "jekyll": "npm run homepage; npm run gh-pages:_data; cd gh-pages; jekyll build; cd ..",
+    "jekyll": "npm run homepage; npm run cp; npm run gh-pages:_data; cd gh-pages; jekyll build; cd ..",
     "jshint": "jshint -c .jshintrc src/**.js test/**.js",
     "tex": "npm run tex:display; npm run tex:inline",
     "tex:display": "ls gh-pages/tex-snippets/display/*.tex | while read texfile; do cat $texfile | katex --display-mode > gh-pages/_includes/display/$(basename ${texfile%.tex}).html; done",
@@ -46,7 +47,6 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "babelify": "^6.3.0",
     "browserify": "^10.1.3",
     "coveralls": "^2.11.2",
     "dox": "^0.7.1",
@@ -61,6 +61,7 @@
     "algebra-group": "^0.2.0",
     "algebra-ring": "^0.2.0",
     "cayley-dickson": "^0.1.0",
+    "inherits": "^2.0.1",
     "is-integer": "^1.0.6",
     "laplace-determinant": "^0.1.0",
     "strict-mode": "^0.4.1"
