--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "_build": "npm test && npm run browserify && npm run tex && npm run jekyll; git status",
     "_pull": "git pull origin master && npm run gh-pages:pull",
     "_push": "git push origin master && npm run gh-pages:push",
+    "bower.json": "npm run bower.json:version; npm run bower.json:commit",
+    "bower.json:commit": "git commit -am 'sync with package.json'; git tag -f $npm_package_version",
+    "bower.json:version": "perl -pi -w -e 's/\"version\": \"[\\d\\.]+\"/\"version\": \"$ENV{npm_package_version}\"/' bower.json",
     "browserify": "npm run browserify:dist; npm run browserify:test",
     "browserify:dist": "browserify -r ./index.js:${npm_package_name} -o dist/${npm_package_name}.js",
     "browserify:test": "browserify test/*.js -o gh-pages/test/bundle.js",
@@ -34,7 +37,7 @@
     "tex:display": "ls gh-pages/tex-snippets/display/*.tex | while read texfile; do cat $texfile | katex --display-mode > gh-pages/_includes/display/$(basename ${texfile%.tex}).html; done",
     "tex:inline": "ls gh-pages/tex-snippets/inline/*.tex | while read texfile; do cat $texfile | katex > gh-pages/_includes/inline/$(basename ${texfile%.tex}).html; done",
     "package.json": "cp package.json gh-pages/_data/",
-    "postversion": "git push origin v${npm_package_version}; npm publish",
+    "postversion": "npm run bower.json; git push origin v${npm_package_version}; npm publish; npm run _push",
     "test": "mocha --bail --require should --reporter min --recursive"
   },
   "repository": {
