--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
     "postversion": "npm run bower.json; git push origin v${npm_package_version}; npm publish; npm run _push",
     "test": "mocha --bail --require should --reporter min --recursive"
   },
+  "pre-commit": [
+    "jshint",
+    "test"
+  ],
   "repository": {
     "type": "git",
     "url": "git://github.com/fibo/algebra.git"
@@ -50,6 +54,7 @@
     "algebra",
     "matrix",
     "vector",
+    "tensor",
     "real",
     "complex",
     "quaternion",
@@ -65,6 +70,7 @@
     "katex": "^0.5.0",
     "mocha": "^2.3.1",
     "mocha-lcov-reporter": "0.0.2",
+    "pre-commit": "^1.1.2",
     "should": "^6.0.1"
   },
   "dependencies": {
