--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Vectors, Matrices, Real, Complex, Quaternion",
   "version": "0.6.2",
   "engines": {
-    "node": ">=4.2.2"
+    "node": "4.2.2"
   },
   "homepage": "http://g14n.info/algebra",
   "author": {
