--- a/gh-pages/_data/package.json
+++ b/gh-pages/_data/package.json
@@ -2,7 +2,9 @@
   "name": "algebra",
   "description": "Vectors, Matrices, Real, Complex, Quaternion",
   "version": "0.6.2",
-  "engines": { "node": ">=4.0.0" },
+  "engines": {
+    "node": "4.2.2"
+  },
   "homepage": "http://g14n.info/algebra",
   "author": {
     "name": "Gianluca Casati",
@@ -14,14 +16,18 @@
     "_build": "npm test && npm run browserify && npm run tex && npm run jekyll; git status",
     "_pull": "git pull origin master && npm run gh-pages:pull",
     "_push": "git push origin master && npm run gh-pages:push",
+    "bower.json": "npm run bower.json:version; npm run bower.json:commit",
+    "bower.json:commit": "git commit -am 'sync with package.json'; git tag -f $npm_package_version",
+    "bower.json:version": "perl -pi -w -e 's/\"version\": \"[\\d\\.]+\"/\"version\": \"$ENV{npm_package_version}\"/' bower.json",
     "browserify": "npm run browserify:dist; npm run browserify:test",
-    "browserify:dist": "browserify -r ./index.js:${npm_package_name} -o dist/${npm_package_name}.js",
-    "browserify:test": "browserify test/*.js -o gh-pages/test/bundle.js",
+    "browserify:dist": "browserify -r ./index.js:${npm_package_name} -t babelify -o dist/${npm_package_name}.js",
+    "browserify:test": "browserify test/*.js -t babelify -o gh-pages/test/bundle.js",
     "coverage": "npm run istanbul && npm run coveralls",
     "coveralls": "cat ./coverage/lcov.info | coveralls --verbose",
     "cp": "npm run cp:dist; npm run cp:package.json",
     "cp:dist": "cp -r dist/ gh-pages/",
     "cp:package.json": "cp package.json gh-pages/_data/",
+    "decrypt:.coveralls.yml": "keybase decrypt -o .coveralls.yml .coveralls.yml.asc",
     "dox": "cat src/*.js | dox > gh-pages/_data/dox.json",
     "gh-pages:_data": "npm run package.json; npm run dox",
     "gh-pages:push": "git subtree --prefix gh-pages push origin gh-pages",
@@ -34,9 +40,13 @@
     "tex:display": "ls gh-pages/tex-snippets/display/*.tex | while read texfile; do cat $texfile | katex --display-mode > gh-pages/_includes/display/$(basename ${texfile%.tex}).html; done",
     "tex:inline": "ls gh-pages/tex-snippets/inline/*.tex | while read texfile; do cat $texfile | katex > gh-pages/_includes/inline/$(basename ${texfile%.tex}).html; done",
     "package.json": "cp package.json gh-pages/_data/",
-    "postversion": "git push origin v${npm_package_version}; npm publish",
+    "postversion": "npm run bower.json; git push origin v${npm_package_version}; npm publish; npm run _push",
     "test": "mocha --bail --require should --reporter min --recursive"
   },
+  "pre-commit": [
+    "jshint",
+    "test"
+  ],
   "repository": {
     "type": "git",
     "url": "git://github.com/fibo/algebra.git"
@@ -45,29 +55,34 @@
     "algebra",
     "matrix",
     "vector",
+    "tensor",
     "real",
     "complex",
     "quaternion",
     "math"
   ],
   "devDependencies": {
-    "browserify": "^10.1.3",
-    "coveralls": "^2.11.2",
-    "dox": "^0.7.1",
-    "install": "^0.1.8",
-    "istanbul": "^0.3.14",
-    "katex": "^0.5.0",
-    "mocha": "^2.3.1",
-    "mocha-lcov-reporter": "0.0.2",
-    "should": "^6.0.1"
+    "babelify": "^7.2.0",
+    "browserify": "^12.0.1",
+    "coveralls": "^2.11.6",
+    "dox": "^0.8.0",
+    "istanbul": "^0.4.1",
+    "katex": "^0.5.1",
+    "mocha": "^2.3.4",
+    "mocha-lcov-reporter": "1.0.0",
+    "pre-commit": "^1.1.2",
+    "should": "^8.0.2"
   },
   "dependencies": {
     "algebra-group": "^0.2.0",
     "algebra-ring": "^0.2.0",
     "cayley-dickson": "^0.1.0",
+    "indices-permutations": "^0.1.0",
     "inherits": "^2.0.1",
     "is-integer": "^1.0.6",
     "laplace-determinant": "^0.1.0",
-    "strict-mode": "^0.4.1"
+    "multidim-array-index": "^0.1.1",
+    "strict-mode": "^0.4.1",
+    "tensor-product": "^0.2.0"
   }
 }
