--- a/package.json
+++ b/package.json
@@ -16,12 +16,10 @@
     "_build": "npm test && npm run browserify && npm run tex && npm run jekyll; git status",
     "_pull": "git pull origin master && npm run gh-pages:pull",
     "_push": "git push origin master && npm run gh-pages:push",
-    "bower.json": "npm run bower.json:version; npm run bower.json:commit",
-    "bower.json:commit": "git commit -am 'sync with package.json'; git tag -f $npm_package_version",
-    "bower.json:version": "perl -pi -w -e 's/\"version\": \"[\\d\\.]+\"/\"version\": \"$ENV{npm_package_version}\"/' bower.json",
     "browserify": "npm run browserify:dist; npm run browserify:test",
     "browserify:dist": "browserify -r ./index.js:${npm_package_name} -t babelify -o dist/${npm_package_name}.js",
     "browserify:test": "browserify test/*.js -t babelify -o gh-pages/test/bundle.js",
+    "check-deps": "npm outdated",
     "coverage": "npm run istanbul && npm run coveralls",
     "coveralls": "cat ./coverage/lcov.info | coveralls --verbose",
     "cp": "npm run cp:dist; npm run cp:package.json",
@@ -40,10 +38,11 @@
     "tex:display": "ls gh-pages/tex-snippets/display/*.tex | while read texfile; do cat $texfile | katex --display-mode > gh-pages/_includes/display/$(basename ${texfile%.tex}).html; done",
     "tex:inline": "ls gh-pages/tex-snippets/inline/*.tex | while read texfile; do cat $texfile | katex > gh-pages/_includes/inline/$(basename ${texfile%.tex}).html; done",
     "package.json": "cp package.json gh-pages/_data/",
-    "postversion": "npm run bower.json; git push origin v${npm_package_version}; npm publish; npm run _push",
+    "postversion": "git push origin v${npm_package_version}; npm publish; npm run _push",
     "test": "mocha --bail --require should --reporter min --recursive"
   },
   "pre-commit": [
+    "check-deps",
     "jshint",
     "test"
   ],
@@ -67,6 +66,7 @@
     "coveralls": "^2.11.6",
     "dox": "^0.8.0",
     "istanbul": "^0.4.1",
+    "jshint": "^2.8.0",
     "katex": "^0.5.1",
     "mocha": "^2.3.4",
     "mocha-lcov-reporter": "1.0.0",
