--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "homepage": "echo \"---\ntitle: $npm_package_name\n---\" > gh-pages/index.md; cat README.md >> gh-pages/index.md",
     "istanbul": "istanbul cover _mocha",
     "jekyll": "npm run homepage; npm run cp; npm run gh-pages:_data; cd gh-pages; jekyll build; cd ..",
-    "jshint": "jshint -c .jshintrc src/**.js test/**.js",
+    "lint": "jshint -c .jshintrc src/**.js test/**.js",
     "tex": "npm run tex:display; npm run tex:inline",
     "tex:display": "ls gh-pages/tex-snippets/display/*.tex | while read texfile; do cat $texfile | katex --display-mode > gh-pages/_includes/display/$(basename ${texfile%.tex}).html; done",
     "tex:inline": "ls gh-pages/tex-snippets/inline/*.tex | while read texfile; do cat $texfile | katex > gh-pages/_includes/inline/$(basename ${texfile%.tex}).html; done",
@@ -42,9 +42,9 @@
     "test": "mocha --bail --require should --reporter min --recursive"
   },
   "pre-commit": [
-    "check-deps",
-    "jshint",
-    "test"
+    "lint",
+    "test",
+    "check-deps"
   ],
   "repository": {
     "type": "git",
@@ -74,9 +74,9 @@
     "should": "^8.0.2"
   },
   "dependencies": {
-    "algebra-group": "^0.3.0",
-    "algebra-ring": "^0.3.0",
-    "cayley-dickson": "^0.1.0",
+    "algebra-group": "^0.4.0",
+    "algebra-ring": "^0.4.0",
+    "cayley-dickson": "^0.2.0",
     "indices-permutations": "^0.2.0",
     "inherits": "^2.0.1",
     "is-integer": "^1.0.6",
