--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 
 domain: g14n.info
 
+permalink: ./:year/:month/:title
+
 gems:
   - jekyll-sitemap
 
-permalink: ./:year/:month/:title
+markdown: kramdown
 
-markdown: redcarpet
-redcarpet:
-  extensions: ["smart", "tables", "no_intra_emphasis", "fenced_code_blocks", "autolink", "strikethrough", "superscript", "with_toc_data"]
+highlighter: rouge
 
 exclude:
   - npm-debug.log
