--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "MIT",
   "main": "index.js",
   "scripts": {
-    "_build": "npm test && npm run browserify && && npm run minify && npm run tex && npm run jekyll; git status",
+    "_build": "npm test && npm run browserify && npm run minify && npm run tex && npm run jekyll; git status",
     "_pull": "git pull origin master && npm run gh-pages:pull",
     "_push": "git push origin master && npm run gh-pages:push",
     "browserify": "npm run browserify:dist; npm run browserify:test",
@@ -61,6 +61,7 @@
     "math"
   ],
   "devDependencies": {
+    "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "coveralls": "^2.11.6",
