--- a/_data/package.json
+++ b/_data/package.json
@@ -13,19 +13,16 @@
   "license": "MIT",
   "main": "index.js",
   "scripts": {
-    "_build": "npm test && npm run browserify && npm run tex && npm run jekyll; git status",
+    "_build": "npm test && npm run browserify && npm run minify && npm run tex && npm run jekyll; git status",
     "_pull": "git pull origin master && npm run gh-pages:pull",
     "_push": "git push origin master && npm run gh-pages:push",
-    "bower.json": "npm run bower.json:version; npm run bower.json:commit",
-    "bower.json:commit": "git commit -am 'sync with package.json'; git tag -f $npm_package_version",
-    "bower.json:version": "perl -pi -w -e 's/\"version\": \"[\\d\\.]+\"/\"version\": \"$ENV{npm_package_version}\"/' bower.json",
     "browserify": "npm run browserify:dist; npm run browserify:test",
     "browserify:dist": "browserify -r ./index.js:${npm_package_name} -t babelify -o dist/${npm_package_name}.js",
     "browserify:test": "browserify test/*.js -t babelify -o gh-pages/test/bundle.js",
+    "check-deps": "npm outdated",
     "coverage": "npm run istanbul && npm run coveralls",
     "coveralls": "cat ./coverage/lcov.info | coveralls --verbose",
-    "cp": "npm run cp:dist; npm run cp:package.json",
-    "cp:dist": "cp -r dist/ gh-pages/",
+    "cp": "npm run cp:package.json",
     "cp:package.json": "cp package.json gh-pages/_data/",
     "decrypt:.coveralls.yml": "keybase decrypt -o .coveralls.yml .coveralls.yml.asc",
     "dox": "cat src/*.js | dox > gh-pages/_data/dox.json",
@@ -35,17 +32,19 @@
     "homepage": "echo \"---\ntitle: $npm_package_name\n---\" > gh-pages/index.md; cat README.md >> gh-pages/index.md",
     "istanbul": "istanbul cover _mocha",
     "jekyll": "npm run homepage; npm run cp; npm run gh-pages:_data; cd gh-pages; jekyll build; cd ..",
-    "jshint": "jshint -c .jshintrc src/**.js test/**.js",
+    "lint": "jshint -c .jshintrc src/**.js test/**.js",
+    "minify": "cd dist; uglifyjs ${npm_package_name}.js --source-map ${npm_package_name}.map --output ${npm_package_name}.min.js --compress --mangle --preamble \"// ${npm_package_name}.js ${npm_package_homepage} \n// license ${npm_package_license}\"; cd -",
     "tex": "npm run tex:display; npm run tex:inline",
     "tex:display": "ls gh-pages/tex-snippets/display/*.tex | while read texfile; do cat $texfile | katex --display-mode > gh-pages/_includes/display/$(basename ${texfile%.tex}).html; done",
     "tex:inline": "ls gh-pages/tex-snippets/inline/*.tex | while read texfile; do cat $texfile | katex > gh-pages/_includes/inline/$(basename ${texfile%.tex}).html; done",
     "package.json": "cp package.json gh-pages/_data/",
-    "postversion": "npm run bower.json; git push origin v${npm_package_version}; npm publish; npm run _push",
+    "postversion": "git push origin v${npm_package_version}; npm publish; npm run _push",
     "test": "mocha --bail --require should --reporter min --recursive"
   },
   "pre-commit": [
-    "jshint",
-    "test"
+    "lint",
+    "test",
+    "check-deps"
   ],
   "repository": {
     "type": "git",
@@ -62,27 +61,31 @@
     "math"
   ],
   "devDependencies": {
+    "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
-    "browserify": "^12.0.1",
+    "browserify": "^13.0.0",
     "coveralls": "^2.11.6",
     "dox": "^0.8.0",
     "istanbul": "^0.4.1",
+    "jshint": "^2.8.0",
     "katex": "^0.5.1",
     "mocha": "^2.3.4",
-    "mocha-lcov-reporter": "1.0.0",
+    "mocha-lcov-reporter": "1.2.0",
     "pre-commit": "^1.1.2",
-    "should": "^8.0.2"
+    "should": "^8.0.2",
+    "uglify-js": "^2.6.2"
   },
   "dependencies": {
-    "algebra-group": "^0.2.0",
-    "algebra-ring": "^0.2.0",
-    "cayley-dickson": "^0.1.0",
-    "indices-permutations": "^0.1.0",
+    "algebra-group": "^0.4.0",
+    "algebra-ring": "^0.4.0",
+    "cayley-dickson": "^0.2.0",
+    "indices-permutations": "^0.2.0",
     "inherits": "^2.0.1",
     "is-integer": "^1.0.6",
     "laplace-determinant": "^0.1.0",
-    "multidim-array-index": "^0.1.1",
-    "strict-mode": "^0.4.1",
+    "multidim-array-index": "^0.2.0",
+    "strict-mode": "^0.5.0",
+    "tensor-contraction": "^0.1.0",
     "tensor-product": "^0.2.0"
   }
 }
