--- a/gh-pages/_data/package.json
+++ b/gh-pages/_data/package.json
@@ -3,7 +3,7 @@
   "description": "Vectors, Matrices, Real, Complex, Quaternion",
   "version": "0.6.2",
   "engines": {
-    "node": "4.2.2"
+    "node": ">= 4"
   },
   "homepage": "http://g14n.info/algebra",
   "author": {
@@ -17,8 +17,8 @@
     "_pull": "git pull origin master && npm run gh-pages:pull",
     "_push": "git push origin master && npm run gh-pages:push",
     "browserify": "npm run browserify:dist; npm run browserify:test",
-    "browserify:dist": "browserify -r ./index.js:${npm_package_name} -t babelify -o dist/${npm_package_name}.js",
-    "browserify:test": "browserify test/*.js -t babelify -o gh-pages/test/bundle.js",
+    "browserify:dist": "browserify -r ./index.js:${npm_package_name} -o dist/${npm_package_name}.js",
+    "browserify:test": "browserify test/*.js -o gh-pages/test/bundle.js",
     "check-deps": "npm outdated",
     "coverage": "npm run istanbul && npm run coveralls",
     "coveralls": "cat ./coverage/lcov.info | coveralls --verbose",
@@ -61,8 +61,6 @@
     "math"
   ],
   "devDependencies": {
-    "babel-preset-es2015": "^6.6.0",
-    "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "coveralls": "^2.11.6",
     "dox": "^0.8.0",
